# moomoo_pnl

./: .env.sample  .gitignore  Dockerfile  README.md  pyproject.toml
.github/workflows/: secret-scan.yml
moomoo_OpenD_9.2.5208_Windows/: OpenD.xml
scripts/: replace_moomoo_xml_details.py
src/: main.py
src/alerts/: __init__.py  task_service.py
src/config/: common_configs.py  project_paths.py  project_secrets.py
src/core/: moomoo_client.py
src/core/database/: __init__.py  custom_types.py
src/core/external_data_services/: currency_rates.py
src/core/external_data_services/news/: rss_feed_service.py
src/core/external_data_services/stock_data/: yfinance.py
src/core/notifications/: notification_service.py
src/core/orders/: managers.py  models.py  models2.py  repositories.py  services.py
src/core/utilities/: __init__.py  cache.py  constants.py  datetime_utils.py  logger.py  opend.py  repositories.py  singleton.py  threaded_service.py  types.py
src/core/utilities/config/: common_configs.py  constants.py  project_paths.py  project_secrets.py  rss_feed_sources.py
src/financial_news/: models.py  repositories.py  rss_feed_service.py
src/routes/: alerts.py  orders.py  positions.py  stock_data.py  utils.py
src/static/: buy-order-form.html  buy-orders.html  index.html  sell-order-form.html  sell-orders.html
src/utils/: opend.py
tests/: test_cache.py  test_datetime_utils.py  test_repositories.py  test_smoke_test.py  test_threaded_service.py
tests/financial_news/: test_repositories.py
